Better BIMI guide

--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -11,24 +11,29 @@
 <div class="row">
   <div class="col offset-lg-2 col-lg-8">
     <p>Brand Indicators for Message Identification (BIMI) is an emerging email specification that allows brand images
-      such as logos to <a href="https://bimigroup.org/where-is-my-bimi-logo-displayed/">appear in the inbox and/or and
+      such as logos to <a href="https://bimigroup.org/where-is-my-bimi-logo-displayed/">appear in the inbox and/or
         next to the from address</a> in supporting mailbox providers. For the brand's image to be displayed by the
-      mailbox provider, the email from domain must have a DMARC policy of <code>quarantine</code> or
-      <code>reject</code>, and the email must pass DMARC, ensuring that the sending organization's domain has not been
+      mailbox provider, the the domain of the email's from header must have a DMARC policy of <code>quarantine</code> or
+      <code>reject</code>, a <code>pct</code> value of <code>100</code> (which is the implicit default if
+      <code>pct</code> is not set), and the email must pass DMARC by having sn SPF or DKIM check align with the email's
+      from header domain, ensuring that the sending organization's domain has not been
       spoofed by an attacker. Many <a href="https://bimigroup.org/bimi-infographic/"> mailbox providers</a> support
-      BIMI, including Google, making BIMI a "nice to have" feature for marketers and other newsletter senders once the organization's domain has an enforced DMARC policy. However,
+      BIMI, including Google, Yahoo. Apple, Fastmail, Comcast, and others making BIMI a "nice to have" feature for marketers and other newsletter senders once the
+      organization's domain has an enforced DMARC policy. However,
       it does have a cost, and <a
         href="https://learn.microsoft.com/en-us/answers/questions/5569074/does-exchange-online-support-bimi-verification">Microsoft
-        does not currently support displaying BIMI images</a> in its products, so BIMI might not be useful for every
-      organization right now.</p>
+        does not currently support displaying BIMI images</a> in its Outlook app or webmail products, so BIMI might not be useful for every
+      organization right now.
+    </p>
 
     <p>BIMI is a draft standard ({{"draft-brand-indicators-for-message-identification" | link_rfc}}) maintained by the
       <a href="https://bimigroup.org/">BIMI Group</a>, which consists of Fastmail, Google, Mailchimp, Proofpoint,
-      SendGrid, Validity. Valimail, and Yahoo.</p>
+      SendGrid, Validity. Valimail, and Yahoo.
+    </p>
 
     <h3>Image format</h3>
-    <p>The BIMI image must be a <a href="https://bimigroup.org/creating-bimi-svg-logo-files/">specifically formatted</a>
-      SVG file.</p>
+    <p>The BIMI image must be a <a href="https://bimigroup.org/creating-bimi-svg-logo-files/">specialized format</a>
+      called SVG Portable/Secure (SVG P/S).</p>
 
     <h3>BIMI certificates</h3>
     <p>Many mailbox providers (including Google) require the domain using BIMI to have a <a
@@ -37,6 +42,7 @@
       use an image. That way, an attacker cannot abuse BIMI to show a brand image on a lookalike domain. These
       certificates currently cost around $1,200/year for a Common Mark Certificate (CMC) without a registered trademark,
       and around $1,600 per year for a Verified Mark Certificate (VMC) for registered trademarks or government seals.
+      Costs may be lower through resellers and/or with multi-year discounts.
     </p>
 
     <h3>Benefits</h3>
@@ -54,7 +60,8 @@
     </ul>
 
     <h3>DNS records</h3>
-    <p>The BIMI Assertion Record is a DNS TXT record tells mailbox providers an HTTPS URL of the image to display and
+    <p>The BIMI Assertion Record is a DNS TXT record that tells mailbox providers an HTTPS URL of the image to display
+      and
       optionally, an HTTPS URL to the certificate for the image. By default, the BIMI Assertion DNS record is located at
       the <code>default._bimi</code> subdomain. The <code>default</code> portion is a <a
         href="https://datatracker.ietf.org/doc/html/draft-brand-indicators-for-message-identification#name-selectors">selector</a>,
@@ -63,9 +70,13 @@
         email header.</a> or <a
         href="https://datatracker.ietf.org/doc/html/draft-brand-indicators-for-message-identification#name-local-part-selectors">Local-Part
         Selectors</a>.</p>
+        <div class="alert alert-info text-center" role="alert">
+        <b>Note:</b> BIMI Assertion Records can also be used to brand specific subdomains by placing a record at that subdomain.<br>
+        For example, <code>default._bimi.marketing.example.com</code>
+      </div>
     </p>The value of the BIMI Assertion Record is made up of <code>tag=value</code> pairs separated by semicolons.</p>
     <table class="table table-bordered table-striped">
-      <caption class="visually-hidden">SPF mechanisms that require DNS lookups</caption>
+      <caption class="visually-hidden">BIMI Assertion Record tag descriptions</caption>
       <thead>
         <th scope="col">Tag</th>
         <th scope="col">Description</th>
@@ -92,7 +103,7 @@
         <tr>
           <td>avp</td>
           <td>Avatar Preference (<b>Optional</b>)
-            <p>For mail sent to those mailbox providers that both participate in BIMI and support the display of
+            <p>For mail sent to those mailbox providers that participate in BIMI and support the display of
               personal avatars (e.g., address book or directory images), this flag is a way for the Domain Owner to
               express its preference as to whether to show the BIMI logo or the personal avatar.</p>
             <p>Possible values: <code>avatar</code> and <code>brand</code> (Default: <code>brand</code>)</p>
@@ -101,7 +112,9 @@
       </tbody>
     </table>
     <p>A domain can explicitly decline to participate in BIMI by publishing a BIMI Assertion Record with empty
-      <code>l</code> and <code>a</code> values (e.g., <code>v=BIMI1; l=; a=;</code>).</p>
+      <code>l</code> and <code>a</code> values (e.g., <code>v=BIMI1; l=; a=;</code>) at the default BIMI selector
+      `defaut.
+    </p>
   </div>
 </div>
 {% endblock %}
