--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -32,7 +32,7 @@
     </p>
 
     <h3>Image format</h3>
-    <p>The BIMI image must be a <a href="https://bimigroup.org/creating-bimi-svg-logo-files/">specialized format</a>
+    <p>The BIMI image must be in a <a href="https://bimigroup.org/creating-bimi-svg-logo-files/">specialized format</a>
       called SVG Portable/Secure (SVG P/S).</p>
 
     <h3>BIMI certificates</h3>
